--- a/test7/index.html
+++ b/test7/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>English Exam B1–B2</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="color-scheme" content="light">
+    <meta name="theme-color" content="#8fb7e8">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
